# VisionTransformers

./: LICENSE  README.md  pyproject.toml  setup.py  train.py  train_classification.py  train_object_detection.py
datasets/: __init__.py  object_detection_dataset.py
metrics/: __init__.py  oda.py
tests/: test_cuda_kernel.py  test_dat.py  test_detr.py
tests/overfit_data/cat_collects_rocks/: cat_collects_rocks.json
utils/: hooks.py  logger.py  plots.py
vision_transformers/: __init__.py  backbone.py  dat.py  deformable_detr.py  detr.py  layers.py  loss.py  utils.py  vit.py
vision_transformers/backbones/: __init__.py  backbone.py  resnet_3d_conv.py
vision_transformers/config/: __init__.py  train_classification_config.py  train_config.py  train_obj_det_config.py
vision_transformers/cuda/: common.cu  common.cuh  deformable_attn_kernel.cu  hungarian_algorithm.cpp
vision_transformers/layers/: __init__.py  attention.py  position_encodings.py  utils.py
vision_transformers/torch-ext/: torch_binding.cpp  torch_binding.hpp
vision_transformers/torch-ext/bilinear_interpolate/: __init__.py
